# game.netplay

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md  appveyor.yml
game.netplay/: addon.xml.in
src/: addon.cpp  addon.h
